test/negative/after01.cfr
// Test for negative after constraint

a
 b ?
  c ?
  d ?
  [ after d ]

// Rao: works fine as failed to parse. 
